kuber-homeworks-2.3/nginx-multitool/netology-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-frontend-deployment
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netology-nginx
  template:
    metadata:
      labels:
        app: netology-nginx
    spec:
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: nginx:1.25.1-alpine3.17
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
        volumeMounts:
        - name: nginx-config
          mountPath: "/etc/nginx"
          readOnly: true
        - name: nginx-site
          mountPath: "/var/www/html/netology"
          readOnly: true
      - name: network-multitool
        imagePullPolicy: IfNotPresent
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          limits:
            cpu: "0.1"
            memory: "128Mi"
      volumes:
      - name: nginx-config
        configMap:
          name: netology-configmap
          items:
          - key: nginx-conf
            path: nginx.conf
      - name: nginx-site
        configMap:
          name: netology-configmap
          items:
          - key: nginx-site
            path: index.html
