kuber-homeworks-2.3/nginx-multitool/netology-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-frontend-service
  namespace: netology
spec:
  ports:
    - port: 9001
      targetPort: 80
      protocol: TCP
      name: nginx-http
    - port: 9002
      targetPort: 8080
      protocol: TCP
      name: multitool-http
    - port: 9003
      targetPort: 11443
      protocol: TCP
      name: multitool-https
  type: ClusterIP
  selector:
    app: netology-nginx
