kuber-homeworks-2.3/nginx-multitool/netology-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - netology.example.com
    secretName: netology-secret
  rules:
  - host: netology.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-frontend-service
            port:
              name: nginx-http
      - path: /multitool
        pathType: Exact
        backend:
          service:
            name: netology-frontend-service
            port:
              name: multitool-http
